# optimizing-agent-fidelity-ma

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: task-description.md
scripts/: calculate_performance.ipynb  compare.ipynb  halve_tasks_by_domain.ipynb  remove_infeasible_tasks.ipynb  reset_evaluations.ipynb  script_utils.py
src/: main.py  routes.py  utils.py
src/actions/: pyautogui_actions.py
src/agents/: agent.py  agent_factory.py
src/agents/base_models/: claude.py  gpt.py  ui_tars_7b.py
src/agents/base_models/anthropic/: claude_agent.py
src/agents/base_models/qwen_3_vl/: prompts.py  qwen_vl_agent.py  tools.py  utils.py
src/agents/grounders/: grounder.py  qwen3_vl.py
src/agents/hybrid/: agent.py  async_agent.py  prompts.py  tools.py
src/agents/hybrid/ace/: ace_agent.py  ace_prompts.py  ace_skills.py
src/agents/hybrid/skill_agent/: skill_agent.py  skill_curator.py  skill_prompts.py  skill_tools.py
src/agents/hybrid/skill_agent/.skills/: chrome.md  gimp.md  libreoffice-calc-go-to-cell.md  libreoffice-calc.md  libreoffice-impress.md  libreoffice-writer.md  make-friends.md
src/agents/hybrid/skill_agent/models/: catalog.py  skill.py  skill_catalog_manager.py  skill_curator.py
src/agents/hybrid/skill_agent_2/: reflector.py  skill_agent_2.py  skill_agent_prompt.py  skill_book.py  skill_cleaner.py  skill_feedback_tickets.py  skill_manager.py  skill_manager_tools.py  skill_reflector.py  trajectory_reflector.py
src/domain/: request.py
src/scripts/: call_model_simple.py
src/utils/: qwen_agent_test.py
(+156 files in other folders)
